--- a/res/layout/usage_side_label.xml
+++ b/res/layout/usage_side_label.xml
@@ -17,4 +17,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:hyphenationFrequency="normal"
     android:textAppearance="?android:attr/textAppearanceSmall" />
