--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -110,6 +110,18 @@
         <item>@string/dark_ui_auto_mode_auto</item>
     </string-array>
 
+    <!-- Dark theme scheduling preferences  [CHAR LIMIT=NONE] -->
+    <string-array name="dark_ui_scheduler_with_bedtime_preference_titles">
+        <!-- 0: None -->
+        <item>@string/dark_ui_auto_mode_never</item>
+        <!-- 1: Custom -->
+        <item>@string/dark_ui_auto_mode_custom</item>
+        <!-- 2: Auto -->
+        <item>@string/dark_ui_auto_mode_auto</item>
+        <!-- 3: Bedtime -->
+        <item>@string/dark_ui_auto_mode_custom_bedtime</item>
+    </string-array>
+
     <!-- Security settings.  The delay after screen is turned off until device locks.
          These are shown in a list dialog. -->
     <string-array name="lock_after_timeout_entries">
