--- a/res/drawable/accessibility_qs_tooltips_background.xml
+++ b/res/drawable/accessibility_qs_tooltips_background.xml
@@ -19,7 +19,7 @@
     <item android:top="8dp">
         <shape
             android:shape="rectangle">
-            <solid android:color="#BCEDDF"/>
+            <solid android:color="@*android:color/accent_primary_device_default"/>
             <corners android:radius="28dp" />
             <padding android:top="8dp" />
         </shape>
@@ -32,7 +32,7 @@
         android:top="-6dp">
         <rotate android:fromDegrees="45">
             <shape android:shape="rectangle">
-            <solid android:color="#BCEDDF"/>
+            <solid android:color="@*android:color/accent_primary_device_default"/>
             </shape>
         </rotate>
     </item>
