--- a/res/xml/accessibility_text_reading_options.xml
+++ b/res/xml/accessibility_text_reading_options.xml
@@ -31,6 +31,16 @@
         settings:iconStart="@drawable/ic_remove_24dp"
         settings:iconStartContentDescription="@string/font_size_make_smaller_desc"/>
 
+    <com.android.settings.widget.LabeledSeekBarPreference
+        android:key="display_size"
+        android:selectable="false"
+        android:summary="@string/screen_zoom_short_summary"
+        android:title="@string/screen_zoom_title"
+        settings:iconEnd="@drawable/ic_add_24dp"
+        settings:iconEndContentDescription="@string/screen_zoom_make_larger_desc"
+        settings:iconStart="@drawable/ic_remove_24dp"
+        settings:iconStartContentDescription="@string/screen_zoom_make_smaller_desc"/>
+
     <SwitchPreference
         android:key="toggle_force_bold_text"
         android:persistent="false"
