--- a/res/drawable/ic_font_download.xml
+++ b/res/drawable/ic_font_download.xml
@@ -15,13 +15,12 @@
     limitations under the License.
 -->
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <com.android.settingslib.widget.AdaptiveIconShapeDrawable
-            android:width="@dimen/accessibility_icon_size"
-            android:height="@dimen/accessibility_icon_size"
-            android:color="@color/accessibility_feature_background"/>
-    </item>
-    <item android:gravity="center"
-        android:drawable="@drawable/ic_font_download"/>
-</layer-list>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="@dimen/accessibility_icon_foreground_size"
+    android:height="@dimen/accessibility_icon_foreground_size"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M6.4,18h2.1l1.1,-3.05h4.8L15.5,18h2.1L13.05,6h-2.1zM10.2,13.2l1.75,-4.95h0.1l1.75,4.95zM4,22q-0.825,0 -1.413,-0.587Q2,20.825 2,20L2,4q0,-0.825 0.587,-1.413Q3.175,2 4,2h16q0.825,0 1.413,0.587Q22,3.175 22,4v16q0,0.825 -0.587,1.413Q20.825,22 20,22zM4,20h16L20,4L4,4v16zM4,4v16L4,4z"/>
+</vector>
