--- a/res/layout/sim_confirm_dialog_multiple_enabled_profiles_supported.xml
+++ b/res/layout/sim_confirm_dialog_multiple_enabled_profiles_supported.xml
@@ -26,15 +26,19 @@
             android:paddingEnd="24dp"
             android:paddingTop="16dp"
             android:paddingStart="24dp"
+            android:paddingBottom="32dp"
             android:gravity="center"
-            android:textAppearance="@style/TextAppearance.DialogMessage"/>
+            android:textAppearance="@style/TextAppearance.DialogMessage"
+            android:visibility="gone"/>
         <ListView
             android:id="@+id/carrier_list"
             android:layout_gravity="center"
-            android:paddingTop="16dp"
-            android:dividerHeight="1dp"
+            android:divider="?android:attr/colorBackgroundFloating"
+            android:dividerHeight="4dp"
+            android:background="@drawable/sim_confirm_dialog_rounded_bg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:id="@+id/info_outline_layout"
@@ -46,7 +50,8 @@
             android:paddingTop="16dp"
             android:paddingStart="24dp"
             android:layout_marginBottom="16dp"
-            android:baselineAligned="true">
+            android:baselineAligned="true"
+            android:visibility="gone">
                 <ImageView
                     android:src="@drawable/ic_info_outline_24dp"
                     android:layout_width="wrap_content"
