--- a/res/xml/dream_fragment_overview.xml
+++ b/res/xml/dream_fragment_overview.xml
@@ -19,15 +19,32 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/screensaver_settings_title">
 
-    <com.android.settingslib.widget.LayoutPreference
-        android:key="dream_picker"
-        android:selectable="false"
-        android:layout="@layout/dream_picker_layout"
-        settings:controller="com.android.settings.dream.DreamPickerController"/>
+    <PreferenceCategory
+        android:title="@string/dream_picker_category">
+        <com.android.settingslib.widget.LayoutPreference
+            android:key="dream_picker"
+            android:selectable="false"
+            android:layout="@layout/dream_picker_layout"
+            settings:controller="com.android.settings.dream.DreamPickerController"/>
+    </PreferenceCategory>
 
-    <Preference
-        android:key="when_to_start"
-        android:title="@string/screensaver_settings_when_to_dream"
-        android:fragment="com.android.settings.dream.WhenToDreamPicker"/>
+    <PreferenceCategory
+        android:key="dream_complication_category"
+        android:title="@string/dream_complications_picker_category"
+        settings:controller="com.android.settings.dream.DreamComplicationCategoryController">
+        <com.android.settingslib.widget.LayoutPreference
+            android:key="dream_complication_picker"
+            android:selectable="false"
+            android:layout="@layout/dream_picker_layout"
+            settings:controller="com.android.settings.dream.DreamComplicationPickerController"/>
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/dream_more_settings_category">
+        <Preference
+            android:key="when_to_start"
+            android:title="@string/screensaver_settings_when_to_dream"
+            android:fragment="com.android.settings.dream.WhenToDreamPicker"/>
+    </PreferenceCategory>
 
 </PreferenceScreen>
