--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -590,4 +590,7 @@
          Take the "Unrestricted data" page as the example, the visible app icons could be 15
          on 6.4 inches screen size whether the font size and display size are both small. -->
     <integer name="config_num_visible_app_icons">20</integer>
+
+    <!-- Whether the dream setup activity should be enabled as part of setupwizard -->
+    <bool name="dream_setup_supported">false</bool>
 </resources>
