--- a/res/xml/user_settings.xml
+++ b/res/xml/user_settings.xml
@@ -56,4 +56,11 @@
         android:order="105"
         settings:allowDividerAbove="true"/>
 
+    <com.android.settingslib.RestrictedPreference
+        android:key="timeout_to_user_zero_preference"
+        android:title="@string/switch_to_user_zero_when_docked"
+        android:order="106"
+        android:fragment="com.android.settings.users.TimeoutToUserZeroSettings"
+        settings:controller="com.android.settings.users.TimeoutToUserZeroPreferenceController"/>
+
 </PreferenceScreen>
