--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -29,7 +29,7 @@
             settings:keywords="@string/keywords_lock_screen_notif"/>
 
         <SwitchPreference
-            android:key="security_dispaly_lockscreen_bypass"
+            android:key="security_display_lockscreen_bypass"
             android:title="@string/lockscreen_bypass_title"
             android:summary="@string/lockscreen_bypass_summary"
             settings:searchable="false"
@@ -62,6 +62,12 @@
             android:title="@string/lockscreen_privacy_controls_setting_toggle"
             android:summary="@string/lockscreen_privacy_controls_summary"
             settings:controller="com.android.settings.display.ControlsPrivacyPreferenceController" />
+
+        <SwitchPreference
+            android:key="lockscreen_trivial_controls_switch"
+            android:title="@string/lockscreen_trivial_controls_setting_toggle"
+            android:summary="@string/lockscreen_trivial_controls_summary"
+            settings:controller="com.android.settings.display.ControlsTrivialPrivacyPreferenceController"/>
 
         <SwitchPreference
             android:key="lockscreen_double_line_clock_switch"
