--- a/res/layout/accessibility_text_reading_reset_button.xml
+++ b/res/layout/accessibility_text_reading_reset_button.xml
@@ -28,9 +28,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/accessibility_text_reading_reset_button_background"
         android:paddingHorizontal="24dp"
         android:paddingVertical="14dp"
         android:text="@string/accessibility_text_reading_reset_button_title"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        style="@style/ActionPrimaryButton"/>
 </FrameLayout>
