--- a/res/values-km/arrays.xml
+++ b/res/values-km/arrays.xml
@@ -498,13 +498,15 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:0 (6386593780953863398) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:1 (4152450357280759894) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:2 (7096549258219399423) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:3 (2760716776980432977) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:4 (601734478369121764) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:5 (6243809315432780521) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:6 (4913577903148415331) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:7 (3653377604690057780) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:8 (3843711267408385410) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="6386593780953863398">"ម៉ោង​គេង"</item>
+    <item msgid="4152450357280759894">"កំពុងបើកបរ"</item>
+    <item msgid="7096549258219399423">"ជក់ចិត្ត"</item>
+    <item msgid="2760716776980432977">"បាន​គ្រប់គ្រង"</item>
+    <item msgid="601734478369121764">"ផ្កាយ"</item>
+    <item msgid="6243809315432780521">"ប្រតិទិន"</item>
+    <item msgid="4913577903148415331">"ពេលវេលា"</item>
+    <item msgid="3653377604690057780">"រោង​ល្ខោន"</item>
+    <item msgid="3843711267408385410">"ផ្កា"</item>
+  </string-array>
 </resources>
