--- a/res/values-or/arrays.xml
+++ b/res/values-or/arrays.xml
@@ -353,7 +353,7 @@
     <item msgid="3605616699204153590">"ନାଭିଗେସନ୍ ବାର୍"</item>
   </string-array>
   <string-array name="accessibility_button_gesture_selector_titles">
-    <item msgid="2370918472773154939">"ବଟନ୍"</item>
+    <item msgid="2370918472773154939">"ବଟନ"</item>
     <item msgid="6922258575853746220">"ଜେଶ୍ଚର୍"</item>
   </string-array>
   <string-array name="accessibility_button_size_selector_titles">
