--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -513,4 +513,5 @@
     <dimen name="zen_mode_circular_icon_inner_icon_size">20dp</dimen>
     <dimen name="zen_mode_circular_icon_margin_between">4dp</dimen>
     <dimen name="zen_mode_circular_icon_margin_vertical">8dp</dimen>
+    <dimen name="zen_mode_circular_icon_text_size">18dp</dimen>
 </resources>
