--- a/res/values-es-rUS/arrays.xml
+++ b/res/values-es-rUS/arrays.xml
@@ -365,10 +365,10 @@
     <item msgid="2397017538263427575">"Manual"</item>
   </string-array>
   <string-array name="vpn_states">
-    <item msgid="2262719249581510939">"Desconectado"</item>
+    <item msgid="2262719249581510939">"Desconectada"</item>
     <item msgid="9141074028293812365">"Iniciando..."</item>
     <item msgid="2234425878608626285">"Conectando..."</item>
-    <item msgid="27547778933579155">"Conectado"</item>
+    <item msgid="27547778933579155">"Conectada"</item>
     <item msgid="893506841727300393">"Tiempo de espera agotado"</item>
     <item msgid="2974952010554140659">"Incorrecta"</item>
   </string-array>
@@ -418,7 +418,7 @@
   </string-array>
   <string-array name="autofill_logging_level_entries">
     <item msgid="2263571982739726576">"Desactivado"</item>
-    <item msgid="4295717421282345505">"Depurado"</item>
+    <item msgid="4295717421282345505">"Depuración"</item>
     <item msgid="8657797891533816070">"Detallado"</item>
   </string-array>
   <string-array name="cdma_system_select_choices">
