--- a/res/xml/modes_rule_settings.xml
+++ b/res/xml/modes_rule_settings.xml
@@ -28,6 +28,21 @@
             android:selectable="false"
             android:layout="@layout/modes_activation_button"/>
 
+    <!-- automatic trigger section; preference changes programmatically depending on type -->
+    <PreferenceCategory
+        android:key="zen_automatic_trigger_category"
+        android:title="@string/zen_mode_automatic_trigger_title">
+        <!-- For configuring the trigger on tap  and enabling/disabling the mode with the switch. -->
+        <com.android.settingslib.PrimarySwitchPreference
+            android:key="zen_automatic_trigger_settings" />
+        <!-- For adding a trigger for custom manual modes (no switch). -->
+        <Preference
+            android:key="zen_add_automatic_trigger"
+            android:title="@string/zen_mode_select_schedule"
+            android:icon="@drawable/ic_add_24dp"
+            settings:isPreferenceVisible="false" />
+    </PreferenceCategory>
+
     <PreferenceCategory
             android:title="@string/mode_interruption_filter_title"
             android:key="modes_filters">
@@ -47,14 +62,6 @@
         <com.android.settings.notification.modes.CircularIconsPreference
             android:key="zen_other_settings"
             android:title="@string/zen_category_exceptions" />
-    </PreferenceCategory>
-
-    <!-- automatic trigger section; preference changes programmatically depending on type -->
-    <PreferenceCategory
-        android:key="zen_automatic_trigger_category"
-        android:title="@string/zen_mode_automatic_trigger_title">
-        <com.android.settingslib.PrimarySwitchPreference
-            android:key="zen_automatic_trigger_settings" />
     </PreferenceCategory>
 
     <PreferenceCategory
